--- a/angular7MoneyTransfert/src/index.html
+++ b/angular7MoneyTransfert/src/index.html
@@ -9,41 +9,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- bootstrap-css -->
-<link rel="stylesheet" href="assets/css/bootstrap.min.css" >
-<!-- //bootstrap-css -->
-<!-- Custom CSS -->
-<link href="assets/css/style.css" rel='stylesheet' type='text/css' />
-<link href="assets/css/style-responsive.css" rel="stylesheet"/>
-<!-- font CSS -->
-<link href='//assets/fonts/.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-<!-- font-awesome icons -->
-<link rel="stylesheet" href="assets/css/font.css" type="text/css"/>
-<link href="assets/css/font-awesome.css" rel="stylesheet"> 
-<link rel="stylesheet" href="assets/css/morris.css" type="text/css"/>
-<!-- calendar -->
-<link rel="stylesheet" href="assets/css/monthly.css">
-<!-- //calendar -->
-<!-- //font-awesome icons -->
-<script src="assets/js/jquery2.0.3.min.js"></script>
-<script src="assets/js/raphael-min.js"></script>
-<script src="assets/js/morris.js"></script>
-<script src="assets/js/jquery.dcjqaccordion.2.7.js"></script>
-<script src="assets/js/scripts.js"></script>
-<script src="assets/js/jquery.slimscroll.js"></script>
-<script src="assets/js/jquery.nicescroll.js"></script>
-<script src="assets/js/jquery.scrollTo.js"></script>
-<script src="assets/js/bootstrap.js"></script>
- 
-</head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  
 <body>
     
   <app-root></app-root>
-  
-
-<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="assets/js/flot-chart/excanvas.min.js"></script><![endif]-->
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ 
 
 </body>
 </html>
